--- a/index.html
+++ b/index.html
@@ -7,70 +7,68 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav class="nav">
-            <ul class="nav-links">
-                <li><a href="#">About me</a></li>
-                <li><a href="#">Services</a></li>
-            </ul>
-
-            <button class="hire">Hire me</button>
-        </nav>
+    <header class="header">
+        <a href="#" class="logo"><img src="./Images/logo.svg" alt="logo"></a>
+        <button type="button" class="btn" name="btn">Hire Me</button>
     </header>
 
     <main>
         <section class="section-1">
-            <div class="container-1">
-                <h1>Arabi Achraf</h1>
-                <h3>Front-End Developer</h3>
-                <div id="co-content">
-                    <p>
-                        Experienced front-end developer with a passion for transforming website designs into captivating digital experiences. I'm Arabi Achraf, and I specialize in finding your best front-end solutions. Let's bring your vision to life!
-                    </p>
-                </div>
+            <h1 class="h1-1">Arabi Achraf</h1>
+            <h3 class="h3-1">Front-End Developer</h3>
 
-                <img src="./Images/Teal and Yellow 3D and Modern We are Hiring Front End Developer Facebook and Instagram Post(1).png" alt="">
-            </div>
-            <div class="container-2">
-                <button>Portfolio</button>
-                <div class="container-content">
-                <img id="pc" src="./Images/Group 4(2).svg" alt="">
-                </div>
-            </div>
+            <p class="p-1">
+                Experienced front-end developer with a passion for transforming website designs into captivating digital experiences. I'm Arabi Achraf, and I specialize in finding your best front-end solutions. Let's bring your vision to life!
+            </p>
+
+            <a href="#h1-3"><button type="button" class="btn-2">Portfolio</button></a>
+            <img class="pc" src="./Images/Group 14.svg" alt="">
         </section>
 
         <section class="section-2">
-            <h1>Welcome! I’m Achraf Arabi</h1>
-            <p>
+            <h1 class="h1-2">Welcome! I’m Achraf Arabi</h1>
+            <p class="p-2">
                 a spirited and ambitious computer science student from Algeria. Web development has been my undeniable passion ever since high school, and it continues to fuel my excitement and drive. With a diverse skill set encompassing C, HTML, CSS, JavaScript, Java, Python, and SQL, I fearlessly embark on every project, translating challenges into innovative front-end solutions. Constantly hungry for knowledge, I stay up-to-date with the latest industry trends, ensuring that I always deliver cutting-edge work. Crafting captivating user interfaces and diving deep into the realm of JavaScript to create seamless interactions are my forte. My creative flair, coupled with my problem-solving prowess, ensures a smooth and engaging user experience. There's nothing more fulfilling than knowing my work makes a lasting impact on users. So, if you're seeking an enthusiastic and skilled front-end developer to join your team, look no further! Let's collaborate and build something extraordinary together, leaving an indelible mark in the digital world. I can't wait to be part of your success story!
             </p>
 
-            <img src="./Images/—Pngtree—web development illustration modern_4484302.png" alt="">
-            <img id="info" src="./Images/Frame 1.svg" alt="">
+            <img class="info" src="./Images/Group 15.svg" alt="">
         </section>
 
         <section class="section-3">
-            <h1>Recent work</h1>
-            <h3>
+            <h1 id="h1-3" class="h1-3">Recent work</h1>
+            <h3 class="h3-3">
                 Explore my complete portfolio to discover additional projects that showcase my diveres range skills and expertise in web development
             </h3>
-            <img id="prpjects" src="./Images/Group 2.svg" alt="">
-            <img id="languages" src="./Images/image 1.svg" alt="">
+
+            <div id="images" class="images">
+                <img src="./Images/imag1.svg" alt="">
+                <img src="./Images/image2.svg" alt="">
+                <img src="./Images/image3.svg" alt="">
+                <img src="./Images/image4.svg" alt="">
+            </div>
+
+            <img class="lan" src="./Images/image 1.svg" alt="">
         </section>
 
         <section class="section-4">
-            <h1>Reviews</h1>
-            <h3>
+            <h1 class="h1-4">Reviews</h1>
+            <h3 class="h3-4">
                 Discover what my clients and colleagues have to say about working with me
             </h3>
-            <img src="./Images/Group 3.svg" alt="">
+
+            <img class="review" src="./Images/review.svg" alt="">
         </section>
 
         <section class="footer">
-            <img id="code" src="./Images/code 2.svg" alt="">
-            <h2>“Adventure is calling,<span>Answer it</span>”</h2>
-            <img id="arrow" src="./Images/Group 5.svg" alt="">
+            <img class="fot" src="./Images/logo.svg" alt="">
+            <h1 class="h1-5">“Adventure is calling,<span>Answer it</span>”</h1>
+            <img class="social"  src="./Images/Social.svg" alt="">
         </section>
     </main>
+
+    <button class="scroll-to-top" title="Scroll to Top">
+        <img src="./Images/up-arrow-svgrepo-com.svg" alt="">
+    </button>
+    <script src="main.js" ></script>
 </body>
 </html>
